<resources>
    <string name="app_name">Antrian</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be at least 6 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_failed">"Register failed"</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="request_canceled">Request canceled</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="login_successful">Login Successful!</string>
    <string name="welcome_to">Welcome to </string>
    <string name="welcome_back">Welcome back</string>

    <!--Login-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="or_log_in_with">Or log in with</string>
    <string name="dont_have_an_account_yet_register_now">
        Don\'t have an account yet? <font color="#FFBD2A"><big><b>Register Now</b></big></font>
    </string>

    <!--Register-->
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="or_register_with">Or register with</string>
    <string name="already_have_an_account">Already have an account? <font color="#FFBD2A"><big><b>Login</b></big></font></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_dashboard">Dashboard Antrian</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="forget_password">Forget Password?</string>
    <string name="invalid_username">username at least 3 letters</string>
    <string name="invalid_confirm_password">Confirm Password not match</string>
    <string name="unknow_user">User not found</string>
    <string name="request_password">Request New Password</string>
    <string name="confirm_join">Confirm Join</string>
    <string name="success_departmens">success</string>
    <string name="fail_departmens">fail</string>
    <string name="open">Buka</string>
    <string name="close">Tutup</string>
    <string name="click_staff_power_off">Tahan Tombol Stop Untuk Menutup Antrian</string>
    <string name="click_staff_power_on">Tahan Tombol Stop Untuk Membuka Antrian</string>
    <string name="logout">Logout</string>
    <string name="department_name">Department Name</string>
    <string name="department_company">Company Name</string>
    <string name="title_dialog_department">Info Department</string>
    <string name="department_prefix">Prefix</string>
    <string name="success_request_password">Success Request Reset Password</string>
    <string name="unsuccess_request_password">Fail Request Reset Password</string>

</resources>