<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <!--guideline_horizontal-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />
    <!--guideline_horizontal-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_lightgrey_transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <!--tv_login_welcomeback-->
    <TextView
        android:id="@+id/tv_login_welcomeback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textSize="@dimen/textsize_xxlarge"
        android:textColor="@color/dark_grey"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_vertical"
        app:layout_constraintRight_toRightOf="@+id/guideline_vertical"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <!--til_login_email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_welcomeback">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="@dimen/margin_small"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/textsize_large" />
    </com.google.android.material.textfield.TextInputLayout>


    <!--btn_register_login-->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:background="@drawable/shape_rounded_lightblue_filled_noborder"
        android:paddingBottom="1dp"
        android:text="@string/request_password"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_login_email" />



    <ProgressBar
        android:id="@+id/spinner_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>